--- a/genesearch/templates/genesearch.html
+++ b/genesearch/templates/genesearch.html
@@ -126,7 +126,7 @@
                                     <label for="select">Disease Type</label>
                                     <br>
                                     <select id="disease_type" name="disease_type">
-                                        <option value="Adipose_differentiation">Adipose differentiation</option>
+                                        <!-- <option value="Adipose_differentiation">Adipose differentiation</option> -->
                                         <option value="Glucose_metabolism">Glucose metabolism</option>
                                         <option value="Liver_cancer">Liver cancer</option>
                                         <option value="Macrophage">Macrophage</option>
@@ -292,6 +292,7 @@
             显示返回的图片
         </iframe>
     </div>
+
 
     <script>
         var tag = 0;
