--- a/genesearch/templates/heatmap.html
+++ b/genesearch/templates/heatmap.html
@@ -1,28 +1,126 @@
 <div class="col-sm-12">
     <p><strong>draw heatmap.</strong></p>
-    <div class="col-sm-12 collapse" id="upload_gene_introduction" aria-expanded="false"
+    <div class="col-sm-12 collapse" id="draw_heatmap_introduction" aria-expanded="false"
          style="height: 0px;">
         <div class="panel-body">
             <ul>
-                <p>This feature generates your interest gene expression in different database.</p>
+                <p>This feature is used for draw heatmap.</p>
             </ul>
             <p>Parameters</p>
             <ul>
-                <li><strong>Gene List</strong>: Input a gene List of interest.</li>
-                <li><strong>Datasets Selection/Dataset</strong>: Select one type of interest in the
-                    “Dataset Selection”.
-                </li>
-                <li><strong>Species Selection</strong>: Choose one species you want to search</li>
-                <li><strong>Tissue Selection</strong>: Choose one Tissue you focus on.</li>
-                <p class="text-info">Search your interested gene List in the datasets.</p>
+                <li><strong>Gene expression file</strong>: UpLoad a gene expression file .</li>
             </ul>
         </div>
     </div>
-    <a data-toggle="collapse" data-target="#upload_gene_introduction" href="###" class="collapsed"
+    <a data-toggle="collapse" data-target="#draw_heatmap_introduction" href="###" class="collapsed"
        aria-expanded="false">
         <p class="text-center">--- Help ---</p>
     </a>
     <div class="row">
-        <p></p>
+
+        <div class="col-sm-4">
+            <label>Upload a Gene Expression matrix：</label>
+            <br>
+            <input type="file" class="input-file" name="upgenematrix" id="fpkm_upload">
+            <br>
+            <button type="button" class="btn btn-primary btn-xs" onclick="FpkmUpload()"
+                    name="upload_fpkm" value="upload_fpkm_submit"
+                    id="upload_fpkm">Upload
+            </button>
+        </div>
+        <div class="col-sm-4">
+            <label class="control-label">Cluster </label>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="row_cluster" id="row_cluster" value="T">
+                    cluster row
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="col_cluster" id="col_cluster" value="T">
+                    cluster column
+                </label>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <span class="help-block">Draw heatmap.</span>
+            <button type="button" class="btn btn-primary" onclick="draw_heatmap()"
+                    name="draw_heatmap_button" value="draw"
+                    id="draw_heatmap_button">Plot
+            </button>
+        </div>
     </div>
 </div>
+
+<script src="/static/JS/clear.js"></script>
+<script>
+    function FpkmUpload() {
+        var form_data = new FormData();
+        var file_info = $('#fpkm_upload')[0].files[0];
+        form_data.append('file', file_info);
+        $.ajax({
+            url: 'upload_fpkm',
+            type: 'POST',
+            data: form_data,
+            processData: false,  // tell jquery not to process the data
+            contentType: false, // tell jquery not to set contentType
+            beforeSend: function () {
+                $("#loading").css('display', 'block');
+            },
+            complete: function () {
+                $("#loading").css('display', 'none');
+            },
+            success: function (callback) {
+                alert("成功上传文件");
+                console.log("Success:" + callback);
+                $("#draw_heatmap_button").val(callback);
+            }
+        });
+    }
+    function draw_heatmap() {
+
+        if($("#row_cluster").is(":checked")){
+            var row_check = $("#row_cluster").val();
+        }else{
+            var row_check = "F";
+        }
+
+        if ($("#col_cluster").is(":checked")){
+            var col_check = $("#col_cluster").val();
+        }else{
+            var col_check = "F";
+        }
+        var fpkm_file = $("#draw_heatmap_button").val();
+        $.ajax({
+            type: "POST",
+            url: 'draw_heatmap',
+            data: {
+                'row_cluster': row_check,
+                'col_cluster': col_check,
+                'fpkm':fpkm_file,
+            },
+            dateType: "json",
+            beforeSend: function () {
+                $("#loading").css('display', 'block');
+            },
+            complete: function () {
+                $("#loading").css('display', 'none');
+            },
+            success: function (result) {
+                console.log(result);
+                {#判断返回的数据类型，如果为字符串就说明后台返回错误，如果为字典就是正确#}
+                console.log($.type(result));
+                if ($.type(result) == "string") {
+                    alert("没有上传文件或者上传的文件格式不对");
+                } else {
+                    var pic = result['pic'];
+                    $("#iframe").attr('src', "/static/" + pic);
+                    $("#iframe").show();
+                }
+            },
+        });
+
+
+    }
+</script>
